--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,10 @@ apply plugin: 'kotlin-android'
 android {
     namespace "com.example.image_gallery_saver"
     compileSdkVersion 34
+
+     kotlinOptions {
+        jvmTarget = "1.8"
+    }
     
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
