--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,6 +28,11 @@ android {
     namespace "com.example.image_gallery_saver"
     compileSdkVersion 34
 
+     compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
      kotlinOptions {
         jvmTarget = "1.8"
     }
